--- a/Bugs/.gitignore
+++ b/Bugs/.gitignore
@@ -1,1 +1,12 @@
-*.o
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
+### Above combination will ignore all files without extension ###
+.vscode/
+.dist/
